--- a/index.html
+++ b/index.html
@@ -127,28 +127,29 @@
                 width: 1px;
                 height: 1px;
                 border-radius: 100%;
-                opacity: .50;
+                opacity: .4;
                 transform: rotate(55deg);
             }
 
             &:before {
                 box-shadow: 0 0 var(--diameter) var(--diameter) var(--pink);
                 animation:
-                    hue 5s 0s linear infinite,
-                    move1 10s 0s linear infinite
+                    hue 8s 0s linear infinite,
+                    move1 15s 0s linear infinite
             }
 
             &:after {
                 box-shadow: 0 0 var(--diameter) var(--diameter) var(--green);
                 animation:
-                    hue 10s 0s linear infinite,
-                    move2 20s 0s linear infinite
+                    hue 11s 0s linear infinite,
+                    move2 23s 0s linear infinite
             }
         }
 
         @media (prefers-color-scheme: dark) {
             .full-blast {
-                color: var(--black);
+                background-color: var(--black);
+                color: var(--yellow);
             }
         }
 
